[gd_scene load_steps=12 format=1]

[ext_resource path="res://bear_enemy/bear_enemy.gd" type="Script" id=1]
[ext_resource path="res://bear_enemy/bear.png" type="Texture" id=2]
[ext_resource path="res://movement_behaviour/enemy_placeholder.tex" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 16, 14 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 17, 16 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 40, 16 )

[sub_resource type="CapsuleShape2D" id=4]

custom_solver_bias = 0.0
radius = 15.0
height = 10.0

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=6]

resource/name = "walk"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/keys = { "cont":false, "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "values":[ 2, 3 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("paw:transform/pos")
tracks/1/interp = 1
tracks/1/keys = { "cont":true, "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "values":[ Vector2( 0, 0 ) ] }

[sub_resource type="Animation" id=7]

length = 1.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("paw:transform/pos")
tracks/0/interp = 1
tracks/0/keys = { "cont":true, "times":FloatArray( 0, 0.5, 0.6, 0.7, 0.8, 0.9 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1 ), "values":[ Vector2( 4.32339, 0.52961 ), Vector2( 9.30581, -2.18807 ), Vector2( 16.2941, -9.82346 ), Vector2( 26.0002, -0.764528 ), Vector2( 15.3236, 10.5591 ), Vector2( 3.99988, 5.05907 ) ] }
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/keys = { "times":FloatArray( 1.3 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"notify_end_attack" } ] }
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/keys = { "cont":false, "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "values":[ 4, 5 ] }

[sub_resource type="CircleShape2D" id=8]

custom_solver_bias = 0.0
radius = 5.0

[node name="bear_enemy" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"2D" }

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
vframes = 3
hframes = 2
frame = 5
__meta__ = { "_edit_lock_":true }

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = { "_edit_lock_":true }

[node name="contact_receiver" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_edit_lock_":true }

[node name="CollisionShape2D" type="CollisionShape2D" parent="contact_receiver"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0
__meta__ = { "_edit_lock_":true }

[node name="direction_facing" type="Label" parent="."]

visibility/visible = false
margin/left = -20.0
margin/top = -71.0
margin/right = 20.0
margin/bottom = -58.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="current_state" type="Label" parent="."]

visibility/visible = false
margin/left = -20.0
margin/top = -59.0
margin/right = 20.0
margin/bottom = -46.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="aggro_range" type="Area2D" parent="."]

transform/pos = Vector2( 40, 0 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="aggro_range"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="patience" type="Timer" parent="."]

process_mode = 1
wait_time = 3.5
one_shot = false
autostart = false

[node name="attack_range" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( -4.37114e-008, -1, 1, -4.37114e-008, 6, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_range"]

transform/pos = Vector2( 6, 0 )
transform/rot = 90.0
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 5 )
anims/walk = SubResource( 6 )
anims/attack = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "walk"

[node name="paw" type="KinematicBody2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 3.99988, 5.05907 )
input/pickable = false
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="Sprite" type="Sprite" parent="paw"]

texture = ExtResource( 3 )
__meta__ = { "_edit_lock_":true }

[node name="CollisionShape2D" type="CollisionShape2D" parent="paw"]

shape = SubResource( 8 )
trigger = true
_update_shape_index = 0
__meta__ = { "_edit_lock_":true }

[node name="stun_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[connection signal="body_enter" from="contact_receiver" to="." method="_on_contact_receiver_body_enter"]

[connection signal="body_enter" from="aggro_range" to="." method="_on_aggro_range_body_enter"]

[connection signal="body_exit" from="aggro_range" to="." method="_on_aggro_range_body_exit"]

[connection signal="timeout" from="patience" to="." method="_on_patience_timeout"]

[connection signal="body_enter" from="attack_range" to="." method="_on_attack_range_body_enter"]

[connection signal="body_exit" from="attack_range" to="." method="_on_attack_range_body_exit"]

[connection signal="timeout" from="stun_timer" to="." method="_on_stun_timer_timeout"]


